removed old test images, fixed bootstrap issue in which username was getting overlapped with the rant details on homepage in mobile devices

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -271,7 +271,7 @@ h5 {
 	padding: 5px;
     margin-bottom: 10px;
 	width: 100%;
-    height: 200px;
+    height: 220px;
     border-radius: 25px
 }
 
@@ -323,6 +323,7 @@ h5 {
 	bottom: 8px;
 	position: absolute;
 	margin-left: 10px;
+	margin-top: 15px;
 }
 .rant-details {
     border: 1px solid #eeeeee;
